--- a/antigravity/scratch/mess-khojo/client/.env
+++ b/antigravity/scratch/mess-khojo/client/.env
@@ -5,3 +5,6 @@ VITE_FIREBASE_STORAGE_BUCKET=mess-khojo-ag.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=746163731012
 VITE_FIREBASE_APP_ID=1:746163731012:web:f6b8f2f3a8b0c8c2161a11
 VITE_FIREBASE_MEASUREMENT_ID=G-4MH0ZB2FTX
+VITE_OP_EMAIL=messkhojooperator@gmail.com
+
+VITE_OP_EMAIL=messkhojooperator@gmail.com
