UI/UX improvements and post-login redirect feature
- Changed 'Book Now' to 'Request Booking' for clarity
- Updated hero tagline to 'Mess Dhundo, Ghar Baithe'
- Split location button into 'Use GPS' and 'Select on Map'
- Implemented interactive map modal for location selection
- Added post-login redirect to return users to booking page
- Made claim listing button smaller and less prominent
- Added phone number prompt for all claim requests
- Enhanced GPS location error handling with better messages
- Fixed scroll lock issue after location selection
- Removed location modal from header (now using map modal)
- Various bug fixes and improvements

--- a/antigravity/scratch/mess-khojo/client/.env
+++ b/antigravity/scratch/mess-khojo/client/.env
@@ -1,10 +1,9 @@
-VITE_FIREBASE_API_KEY=AIzaSyBAG3Sqh_W8IMy7FAuq-MKHCJANF3An9Fw
+﻿VITE_FIREBASE_API_KEY=AIzaSyBAG3Sqh_7aVE2Fbjh1whOmY6fCZGakx57rKzI
 VITE_FIREBASE_AUTH_DOMAIN=mess-khojo-ag.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=mess-khojo-ag
 VITE_FIREBASE_STORAGE_BUCKET=mess-khojo-ag.firebasestorage.app
-VITE_FIREBASE_MESSAGING_SENDER_ID=746163731012
-VITE_FIREBASE_APP_ID=1:746163731012:web:f6b8f2f3a8b0c8c2161a11
+VITE_FIREBASE_MESSAGING_SENDER_ID=235914965
+VITE_FIREBASE_APP_ID=1:235914965:web:5d6f71cd8130103d5479c5
 VITE_FIREBASE_MEASUREMENT_ID=G-4MH0ZB2FTX
-VITE_OP_EMAIL=messkhojooperator@gmail.com
-
+VITE_GOOGLE_MAPS_API_KEY=AIzaSyCHxb7aVE2Fbjh1whOmY6fCZGakx57rKzI
 VITE_OP_EMAIL=messkhojooperator@gmail.com
