--- a/antigravity/scratch/mess-khojo/client/package.json
+++ b/antigravity/scratch/mess-khojo/client/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vis.gl/react-google-maps": "^1.7.1",
+    "browser-image-compression": "^2.0.2",
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.24",
-    "leaflet": "^1.9.4",
     "lucide-react": "^0.554.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "react-window": "^2.2.5",
+    "use-debounce": "^10.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
