--- a/antigravity/scratch/mess-khojo/netlify.toml
+++ b/antigravity/scratch/mess-khojo/netlify.toml
@@ -4,7 +4,7 @@
 [build]
   base = "client"
   command = "npm run build"
-  publish = "dist"
+  publish = "client/dist"
 
 # Redirects for Single Page Application
 [[redirects]]
