feat: Add Google Analytics 4 tracking with comprehensive event tracking
- Integrated react-ga4 for analytics tracking
- Added 15+ custom events (search, location, booking, auth, etc.)
- Implemented automatic page view tracking on route changes
- Added event tracking across Home, MessDetails, RoomDetails, UserLogin, UserSignup, MessRegistration
- Configured GA4 Measurement ID: G-4MH0ZB2FTX
- Added development mode debugging with console logs
- Created analytics utility module for centralized tracking

--- a/antigravity/scratch/mess-khojo/client/.env.example
+++ b/antigravity/scratch/mess-khojo/client/.env.example
@@ -9,3 +9,6 @@ VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
 # Google Maps API Key
 VITE_GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+
+# Google Analytics 4
+VITE_GA4_MEASUREMENT_ID=G-XXXXXXXXXX
