--- a/antigravity/scratch/mess-khojo/client/.env
+++ b/antigravity/scratch/mess-khojo/client/.env
@@ -7,3 +7,4 @@ VITE_FIREBASE_APP_ID=1:235914965:web:5d6f71cd8130103d5479c5
 VITE_FIREBASE_MEASUREMENT_ID=G-4MH0ZB2FTX
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyCHxb7aVE2Fbjh1whOmY6fCZGakx57rKzI
 VITE_OP_EMAIL=messkhojooperator@gmail.com
+VITE_GA4_MEASUREMENT_ID=G-4MH0ZB2FTX
