--- a/antigravity/scratch/mess-khojo/client/package.json
+++ b/antigravity/scratch/mess-khojo/client/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.554.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-ga4": "^2.1.0",
     "react-router-dom": "^7.9.6",
     "react-window": "^2.2.5",
     "use-debounce": "^10.1.0"
