--- a/antigravity/scratch/mess-khojo/netlify.toml
+++ b/antigravity/scratch/mess-khojo/netlify.toml
@@ -1,51 +1,11 @@
-# Netlify Configuration for Mess Khojo
-
-# Build settings
 [build]
-  base = "client"
   command = "npm run build"
-  publish = "client/dist"
+  publish = "dist"
 
-# Redirects for Single Page Application
+[functions]
+  directory = "netlify/functions"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-# Headers for better caching and security
-[[headers]]
-  for = "/*"
-  [headers.values]
-    X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
-    X-Content-Type-Options = "nosniff"
-    Referrer-Policy = "strict-origin-when-cross-origin"
-
-# Cache static assets (including favicon)
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-# Cache images including favicon with shorter duration
-[[headers]]
-  for = "/*.png"
-  [headers.values]
-    Cache-Control = "public, max-age=604800"
-
-[[headers]]
-  for = "/*.jpg"
-  [headers.values]
-    Cache-Control = "public, max-age=604800"
-
-[[headers]]
-  for = "/*.ico"
-  [headers.values]
-    Cache-Control = "public, max-age=604800"
-
-# Ensure favicon is accessible
-[[headers]]
-  for = "/logo.png"
-  [headers.values]
-    Cache-Control = "public, max-age=86400"
-    Content-Type = "image/png"
