Fix: Move netlify functions to client folder and update base path

--- a/antigravity/scratch/mess-khojo/netlify.toml
+++ b/antigravity/scratch/mess-khojo/netlify.toml
@@ -1,11 +1,25 @@
+# Netlify Configuration for Mess Khojo
+
+# Build settings
 [build]
+  base = "antigravity/scratch/mess-khojo/client"
   command = "npm run build"
   publish = "dist"
 
+# Functions directory (relative to base)
 [functions]
   directory = "netlify/functions"
 
+# Redirects for Single Page Application
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+# Headers for security
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
