--- a/antigravity/scratch/mess-khojo/client/package.json
+++ b/antigravity/scratch/mess-khojo/client/package.json
@@ -16,6 +16,7 @@
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
+    "node-fetch": "^2.6.9",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-ga4": "^2.1.0",
