feat(seo): Implement comprehensive SEO strategy for Balasore market
Added dynamic sitemap generator, enhanced meta tags with 'Mess' keywords, structured data, and custom 404 page

--- a/antigravity/scratch/mess-khojo/client/.env
+++ b/antigravity/scratch/mess-khojo/client/.env
@@ -8,3 +8,11 @@ VITE_FIREBASE_MEASUREMENT_ID=G-4MH0ZB2FTX
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyCHxb7aVE2Fbjh1whOmY6fCZGakx57rKzI
 VITE_OP_EMAIL=messkhojooperator@gmail.com
 VITE_GA4_MEASUREMENT_ID=G-4MH0ZB2FTX
+
+# Telegram Bot Configuration for Operator Notifications
+# Get bot token from @BotFather on Telegram
+# Get chat ID by messaging your bot and visiting: https://api.telegram.org/bot<TOKEN>/getUpdates
+VITE_TELEGRAM_BOT_TOKEN=8573732267:AAGzB3Fdn7jeNkVecVjsiwqcaXkV5p1Nd2M
+VITE_TELEGRAM_CHAT_ID=7187887684
+
+
