--- a/antigravity/scratch/mess-khojo/client/package.json
+++ b/antigravity/scratch/mess-khojo/client/package.json
@@ -14,6 +14,7 @@
     "browser-image-compression": "^2.0.2",
     "dotenv": "^17.2.3",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
     "lucide-react": "^0.554.0",
     "node-fetch": "^2.6.9",
