fix(build): Correct Netlify build base path to 'client'

--- a/antigravity/scratch/mess-khojo/netlify.toml
+++ b/antigravity/scratch/mess-khojo/netlify.toml
@@ -2,7 +2,7 @@
 
 # Build settings
 [build]
-  base = "antigravity/scratch/mess-khojo/client"
+  base = "client"
   command = "npm run build"
   publish = "dist"
 
